hphp/test/zend/good/Zend/tests/traits/bug55524.php.expectf

Fatal error: Only interfaces and classes may extend other interfaces and classes. in %s/bug55524.php on line 5
